--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,13 @@ plugins {
 }
 
 dependencies {
-
 	implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
 	implementation 'io.quarkus:quarkus-arc'
 	implementation 'io.quarkus:quarkus-resteasy-reactive'
 	implementation 'io.quarkus:quarkus-qute'
 	implementation 'io.quarkus:quarkus-smallrye-openapi'
+	implementation 'io.quarkus:quarkus-reactive-pg-client'
+	implementation 'io.quarkus:quarkus-hibernate-reactive-panache'
 
 	implementation 'org.jboss.logmanager:log4j2-jboss-logmanager'
 
