--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 #Gradle properties
-#Fri Feb 10 23:03:50 CET 2023
+#Mon Feb 13 21:23:42 UTC 2023
 quarkusPluginVersion=2.16.2.Final
 quarkusPlatformArtifactId=quarkus-bom
 quarkusPluginId=io.quarkus
