--- a/buildSrc/gradle.properties
+++ b/buildSrc/gradle.properties
@@ -8,4 +8,4 @@ quarkusPluginVersion=2.16.2.Final
 quarkusPlatformVersion=2.16.2.Final
 spotlessPluginVersion=6.13.0
 
-
+sonarPluginVersion=4.0.0.2929
