align  report path

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,6 @@ jobs:
     - name: Test Reports
       uses: xportation/junit-coverage-report@main
       with:
-        junit-path: ./test-results/test/*.xml
-        coverage-path: ./reports/jacoco/test/coverage.xml
+        junit-path: ./build/test-results/test/*.xml
+        coverage-path: ./build/reports/jacoco/test/coverage.xml
 
