--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,4 +49,5 @@ jobs:
           name: JUnit Test
           path: ./build/test-results/test/*.xml # Path to test results
           reporter: java-junit
+          token: ${{ secrets.REPORT_TOKEN }}
           #coverage-path: ./build/reports/jacoco/test/coverage.xml
